syntax = "proto3";

option go_package = "pkg/pb";

message User {
    string id = 1;
    string displayName = 2;
    string email = 3;
    string phoneNumber = 4;
    string photoURL = 5;
    string pronouns = 6;
    string meetingLink = 7;
}

message LoginRequest {
  string email = 1;
}

message LoginResponse {
  User user = 1;
}

service Authentication {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}